fix - Fixing  an icon search wrong padding and styling

--- a/app/components/Searching/Searching.module.css
+++ b/app/components/Searching/Searching.module.css
@@ -12,9 +12,7 @@
     position: absolute;
     top: 3px;
     right: 3px;
-    width: 35px;
+    width: 30px;
     height: 30px;
-    display: flex;
-
-    border-radius: 5px;
+    padding: 8px;
 }
